# StonesOfWisdom

./: Cargo.toml  README.md
Data/: Screen1.xml  Screen2.xml  Screen3.xml  Test.json
src/: form.rs  gamefield.rs  main.rs  mesh.rs  render_gl.rs  tester.rs
src/gamefield/: real_ai.rs
src/shaders/: blue.frag  green.frag  grey.frag  red.frag
